--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "NODE_ENV=production webpack build"
   },
   "dependencies": {
-    "jxl-oxide-wasm": "=0.7.0-alpha.0"
+    "jxl-oxide-wasm": "=0.7.0"
   },
   "devDependencies": {
     "css-loader": "^6.10.0",
