--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
   },
   "license": "MIT OR Apache-2.0",
   "private": true,
-  "packageManager": "yarn@4.1.0",
+  "packageManager": "yarn@4.4.1",
   "scripts": {
     "dev": "webpack serve",
     "build": "NODE_ENV=production webpack build"
   },
   "dependencies": {
-    "jxl-oxide-wasm": "=0.8.0"
+    "jxl-oxide-wasm": "=0.9.0-alpha.0"
   },
   "devDependencies": {
-    "css-loader": "^6.10.0",
+    "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
-    "html-loader": "^5.0.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.8.0",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.90.1",
+    "mini-css-extract-plugin": "^2.9.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.1.0"
   }
 }
