--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "NODE_ENV=production webpack build"
   },
   "dependencies": {
-    "jxl-oxide-wasm": "=0.9.0-alpha.0"
+    "jxl-oxide-wasm": "=0.9.0"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
